--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-<script defer src="main.js"></script></head>
+<script defer src="index.js"></script></head>
 
 <body>
 
